Thu May 24 00:30:59 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * dds/DCPS/Service_Participant.h:

          Changed TAO::DCPS::servant_to_reference() to increment the reference
          count as it did before we switched to local interfaces.

        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:

          Removed #if code used to allow build 
          with old style <type>SZSeq type.

Wed May 23 22:25:40 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/LocalObject.h:

          Reverted the change directly below this one.

Wed May 23 21:00:59 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * dds/DCPS/LocalObject.h:

          Resolved a problem with reference counting.

        * DDS_release_notes.txt:

          Added more notes about servants vs object references.

        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:
        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
        * tests/DCPS/ZeroCopyRead/main.cpp:

          Changed the tests to not use servants for the write and read calls.
          There is no longer a performance benefit (thanks to local interfaces).
          Added comments to that effect.

Wed May 23 17:19:02 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * DevGuideExamples/DDS/Messenger/publisher.cpp:
        * DevGuideExamples/DDS/Messenger/subscriber.cpp:
        * examples/DCPS/Messenger_Imr/publisher.cpp:
        * examples/DCPS/Messenger_Imr/subscriber.cpp:
        * examples/DCPS/Messenger_IOGR_Imr/publisher.cpp:
        * examples/DCPS/Messenger_IOGR_Imr/subscriber.cpp:
        * performance-tests/DCPS/McastListenerTest/publisher.cpp:
        * performance-tests/DCPS/McastListenerTest/subscriber.cpp:
        * performance-tests/DCPS/SimpleE2ETest/publisher.cpp:
        * performance-tests/DCPS/SimpleE2ETest/subscriber.cpp:
        * performance-tests/DCPS/TCPListenerTest/publisher.cpp: