@@ -164,7 +164,7 @@ void DataReaderListenerImpl::on_subscription_match (
       }
 
     ::Xyz::FooDataReaderImpl* dr_servant
-      = TAO::DCPS::reference_to_servant<::Xyz::FooDataReaderImpl>(foo_dr.in());
+      = TAO::DCPS::reference_to_servant< ::Xyz::FooDataReaderImpl>(foo_dr.in());
 
     ::Xyz::FooSeq foo(num_ops_per_thread) ;
     ::DDS::SampleInfoSeq si(num_ops_per_thread) ;
